--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     AVAILABLE FOR OJT 2026
                 </div>
                 <h1 class="text-6xl md:text-8xl font-extrabold text-white leading-tight mb-6 tracking-tighter">
-                    Software <br><span class="text-brand italic">Intern.</span>
+                    IT Students <br><span class="text-brand italic">Intern.</span>
                 </h1>
                 <p class="text-lg text-slate-400 max-w-xl mb-10 leading-relaxed font-light">
                     4th Year Information Technology student at <span class="text-white font-semibold">St. Anthony's College</span>.
@@ -314,4 +314,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
